# market-regime-intelligence

./: .gitignore  README.md  main.py  project_tree.txt  pyproject.toml
configs/: base.yaml  prod.yaml  test.yaml
scripts/: test_logging.py
src/market_regime_intelligence/cleaning/: cleaner.py  exceptions.py  models.py  pipeline.py  writer.py
src/market_regime_intelligence/cli/: __init__.py  characterize.py  clean.py  ingest.py  main.py  predict.py  train.py  validate.py
src/market_regime_intelligence/common/: file_reader.py  file_writer.py  path_builder.py
src/market_regime_intelligence/config/: __init__.py  exceptions.py  loader.py  manager.py  settings.py
src/market_regime_intelligence/domain/: dataset.py  datasets.py  enums.py  providers.py  registry.py
src/market_regime_intelligence/ingestion/: datasource.py  exceptions.py  factory.py  models.py  pipeline.py  writer.py  yahoo.py
src/market_regime_intelligence/ingestion/clients/: nse_client.py
src/market_regime_intelligence/ingestion/providers/: bse.py  manual.py  nse.py  rbi.py
src/market_regime_intelligence/logging/: __init__.py  formatters.py  logger.py
src/market_regime_intelligence/validation/: exceptions.py  models.py  rules.py  validator.py
